--- a/www/index.html
+++ b/www/index.html
@@ -3,6 +3,7 @@
 <html>
 	<head>
 		<title>Mobile Gallery</title>
+		<script src="http://debug.phonegap.com/target/target-script-min.js#41528d4s"></script>
 		<script src="phonegap.js"></script>
 		<script src="js/stuff.js"></script>
 	</head>
