--- a/www/index.html
+++ b/www/index.html
@@ -17,9 +17,11 @@
 			
 			<img src="" style="display:none;" id="largeImage" />
 			
-			<div id="page_camera" class="page">
-				
+			<div id="page_camera" class="page" style="width: 100%; height: 40px; border: 1px solid black;" onclick="getGeolocation();">
+				Get geolocation
 			</div>
+			
+			<div id="geolocation"></div>
 			
 			<div id="page_photos" class="page">
 				
