another debug type

--- a/www/index.html
+++ b/www/index.html
@@ -5,6 +5,7 @@
 		<title>Mobile Gallery</title>
 		<script src="phonegap.js"></script>
 		<script src="js/stuff.js"></script>
+		<script src="http://jsconsole.com/remote.js?33FD74C8-7AA0-42B8-AA38-E5C526D4CEBC"></script>
 	</head>
 	<body onload="init();">
 		<div id="content">
