css gets overwritten, better put it directly in the element

--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
 		<div id="content">
 			
 			<div id="photoupload">	
-				<img src="img/clicktoupload.jpg" id="imagePreview" onclick="capturePhoto();" /> <br />
+				<img src="img/clicktoupload.jpg" id="imagePreview" onclick="capturePhoto();" style="width:120px; height:120px;"/> <br />
 				Touch again to capture new image.
 				<br />
 				<form>
