--- a/www/index.html
+++ b/www/index.html
@@ -5,22 +5,16 @@
 		<title>Mobile Gallery</title>
 		<script src="phonegap.js"></script>
 		<script src="js/stuff.js"></script>
+		<script src="js/jquery-1.8.2.min.js"></script>
+		<script src="js/jquery.mobile-1.2.0.min.js"></script>
 	</head>
 	<body onload="init();">
-		<div id="content">
-			
-			<div id="photoupload">	
-				<img src="img/clicktoupload.jpg" id="imagePreview" onclick="capturePhoto();" style="width:120px; height:120px;"/> <br />
-				Touch again to capture new image.
-				<br />
-				<form>
-					Description: 
-					<textarea id="description" rows="3" cols="30"></textarea>
-					
-					<input type="button" value="Upload" onclick="uploadPhoto();" />
-				</form>
-			</div>
-			
+		<div data-role="page" id="menu">
+			<ul data-role="listview" data-inset="true">
+				<li><a href="#">Login/Register</a></li>
+				<li><a href="photoUpload.html">Capture Photo</a></li>
+				<li><a href="viewPhotos.html">View Photos</a></li>
+			</ul>
 		</div>
 	</body>
 </html>
