--- a/www/index.html
+++ b/www/index.html
@@ -3,18 +3,23 @@
 <html>
 	<head>
 		<title>Mobile Gallery</title>
+		<link rel="stylesheet" type="text/css" href="css/stuff.css" />
+		<link rel="stylesheet" type="text/css" href="css/jquery.mobile-1.2.0.min.css" />
 		<script src="phonegap.js"></script>
-		<script src="js/stuff.js"></script>
 		<script src="js/jquery-1.8.2.min.js"></script>
+		<script src="js/stuff.js"></script>
 		<script src="js/jquery.mobile-1.2.0.min.js"></script>
 	</head>
 	<body onload="init();">
 		<div data-role="page" id="menu">
+			<div data-role="header">Menu</div>
+			<div data-role="content">
 			<ul data-role="listview" data-inset="true">
 				<li><a href="#">Login/Register</a></li>
 				<li><a href="photoUpload.html">Capture Photo</a></li>
 				<li><a href="viewPhotos.html">View Photos</a></li>
 			</ul>
+			</div>
 		</div>
 	</body>
 </html>
