--- a/www/viewPhotos.html
+++ b/www/viewPhotos.html
@@ -4,6 +4,8 @@
 <body onload="init();">
 <head>
 	<title>Mobile Gallery</title>
+	<link rel="stylesheet" type="text/css" src="css/stuff.css" />
+	<link rel="stylesheet" type="text/css" src="css/jquery.mobile-1.2.0.min.css" />
 	<script src="phonegap.js"></script>
 	<script src="js/jquery-1.8.2.min.js"></script>
 	<script src="js/jquery.mobile-1.2.0.min.js"></script>
