back to ajax fix
no need for panic on geolocation, my phone was flipping out, not the app

--- a/www/viewPhotos.html
+++ b/www/viewPhotos.html
@@ -14,7 +14,11 @@
 </head>
 
 <div data-role="page" onload="getPhotos();">
+	<div data-role="header">View Photos</div>
 	
+	<div data-role="content">
+		<div id="uploaded_images"></div>
+	</div>
 </div>
 
 </body>
