--- a/www/viewPhotos.html
+++ b/www/viewPhotos.html
@@ -17,7 +17,9 @@
 	<div data-role="header">View Photos</div>
 	
 	<div data-role="content">
-		<div id="uploaded_images"></div>
+		<div id="uploaded_images">
+			
+		</div>
 	</div>
 </div>
 
