--- a/www/photoUpload.html
+++ b/www/photoUpload.html
@@ -7,6 +7,7 @@
 	<link rel="stylesheet" type="text/css" src="css/stuff.css" />
 	<link rel="stylesheet" type="text/css" src="css/jquery.mobile-1.2.0.min.css" />
 	<script src="phonegap.js"></script>
+	<script src="js/jquery.xdomainajax.js"></script>
 	<script src="js/jquery-1.8.2.min.js"></script>
 	<script src="js/stuff.js"></script>
 	<script src="js/jquery.mobile-1.2.0.min.js"></script>
