--- a/www/viewPhotos.html
+++ b/www/viewPhotos.html
@@ -12,9 +12,12 @@
 	<script src="js/stuff.js"></script>
 	<script src="js/jquery.mobile-1.2.0.min.js"></script>
 	
+	<script>
+		$('#uploaded_images').load('http://mg.whitecloud.se/getPhotos.php');
+	</script>
 </head>
 
-<div data-role="page" onload="getPhotos();">
+<div data-role="page">
 	<div data-role="header">View Photos</div>
 	
 	<div data-role="content">
